# styio

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY-USAGE.md  LICENSE  LICENSE-POLICY.md  NOTICE  README.md  README_zh.md  RELEASE-POLICY.md  SECURITY.md  SUPPORT.md  extend_tests.py  hello.styio  output.ll  sample.c  sample.cpp  sample.ll  some.txt  styio  styio_test  xmake.lua
benchmark/: CMakeLists.txt  COVERAGE-MATRIX.md  README.md  REGRESSION-TEMPLATE.md  perf-report.py  perf-route.sh  soak-minimize.sh  styio_soak_test.cpp  styio_task_scheduler_perf_test.cpp
benchmark/async-runtime/: README.md  run-async-bench.py  test_async_runtime_blackbox.py
benchmark/regressions/: README.md
benchmark/reports/: README.md
src/: CMakeLists.txt  main.cpp  toy.cpp
src/StyioAST/: AST.hpp  ASTDecl.hpp
src/StyioAnalyzer/: ASTAnalyzer.hpp
src/StyioCodeGen/: CodeGen.cpp  CodeGenG.cpp  CodeGenIO.cpp  CodeGenPulse.cpp  CodeGenVisitor.hpp  GetTypeG.cpp
src/StyioConfig/: CompilePlanContract.cpp  CompilePlanContract.hpp  SourceBuildInfo.cpp  SourceBuildInfo.hpp
src/StyioException/: Exception.hpp
src/StyioExtern/: ExternLib.cpp  ExternLib.hpp
src/StyioIDE/: CompilerBridge.cpp  SemDB.cpp  Service.cpp  Service.hpp  Syntax.cpp  VFS.cpp
src/StyioIR/: IRDecl.hpp  StyioIR.hpp
src/StyioIR/GenIR/: GenIR.hpp  SCIR.hpp  SGIR.hpp  SIOIR.hpp
src/StyioIR/IOIR/: IOIR.hpp
src/StyioJIT/: JITExecutor.hpp  StyioJIT_ORC.hpp
src/StyioLSP/: Server.cpp  Server.hpp
src/StyioLowering/: AstToStyioIR.cpp  AstToStyioIRLowerer.hpp  StyioIROptimizer.cpp  StyioIROptimizer.hpp
src/StyioNative/: NativeInterop.cpp  NativeInterop.hpp  NativeToolchainConfig.hpp.in
src/StyioParser/: HashFunctionParser.hpp  NewParserExpr.cpp  Parser.cpp  Parser.hpp  SymbolRegistry.cpp  SymbolRegistry.hpp  Tokenizer.cpp
src/StyioPrelude/: resources.styio
src/StyioProfiler/: FrontendProfiler.cpp  FrontendProfiler.hpp
src/StyioResourceTopology/: ResourceTopology.cpp  ResourceTopology.hpp
src/StyioRuntime/: HandleTable.hpp
src/StyioSema/: SemaContext.hpp  TypeInfer.cpp
src/StyioTesting/: PipelineCheck.cpp
src/StyioToString/: ToString.cpp  ToStringVisitor.hpp
src/StyioToken/: Token.cpp  Token.hpp
src/StyioUtil/: BuiltinMethods.hpp  DynamicValue.hpp  IOIntrinsics.hpp  ResourceNames.hpp
src/StyioVisitors/: ASTAnalyzer.hpp  CodeGenImpl.cpp  CodeGenVisitor.hpp  DFAImpl.hpp  TypeInferImpl.cpp
src/cmake/: StyioBackendSources.cmake  StyioFrontendSources.cmake  StyioIDESources.cmake  StyioTargetHelpers.cmake
src/include/StyioAST/: AST.hpp  ASTAccept.cpp  ASTDecl.hpp  ASTToString.cpp  CodeGen.cpp
src/include/StyioException/: Exception.hpp
src/include/StyioExtern/: ExternLib.hpp
src/include/StyioJIT/: StyioJIT_ORC.hpp
src/include/StyioParser/: Parser.cpp  Parser.hpp
src/include/StyioToken/: Token.cpp  Token.hpp
src/include/StyioUtil/: Util.cpp  Util.hpp
src/include/StyioVisitor/: ASTVisitor.cpp
src/include/StyioVisitors/: ASTAnalyzer.hpp  ASTVisitor.cpp  CodeGenImpl.cpp  CodeGenVisitor.hpp  GetTypeImpl.cpp  LLVMGenerator.cpp  LLVMTypeGetter.cpp  ToStringImpl.cpp  TypeChecker.cpp  TypeInferImpl.cpp  Util.hpp
tests/: .lit_test_times.txt  CMakeLists.txt  handcraft.ll  lit.cfg  resource_topology_test.cpp  styio_test.cpp
tests/algorithms/: README.md
tests/algorithms/.common/: CxxReferenceEquivalence.cpp  CxxReferenceEquivalence.hpp
tests/algorithms/accumulate_sum/: accumulate_sum.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/adjacent_difference/: adjacent_difference.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/adjacent_equal_index/: adjacent_equal_index.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/all_positive_flag/: all_positive_flag.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/any_negative_flag/: any_negative_flag.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/binary_search/: binary_search.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/bubble_sort/: bubble_sort.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/count_value/: count_value.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/equal_flag/: equal_flag.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/equal_range_bounds/: equal_range_bounds.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/euclidean_gcd/: euclidean_gcd.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/exclusive_scan_sum/: exclusive_scan_sum.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/factorial/: factorial.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/inclusive_scan_sum/: inclusive_scan_sum.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/inner_product/: inner_product.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/is_sorted_flag/: is_sorted_flag.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/lexicographical_compare_flag/: lexicographical_compare_flag.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/linear_search/: linear_search.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/max_element_value/: max_element_value_1.styio  max_element_value_2.styio  max_element_value_3.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/min_element_value/: min_element_value.styio  reference.cpp  reference.hpp  test.cpp
tests/algorithms/minmax_pair/: minmax_pair.styio  reference.cpp  reference.hpp  test.cpp
tests/cmake/: styio_profiler_smoke.cmake
tests/codegen/: 00000002.styio  00000003.styio  00000004.styio  00000005.styio
tests/exceptions/: 00000000.styio  00000001.styio
tests/features/: README.md
tests/fuzz/: CMakeLists.txt  README.md  REGRESSION-TEMPLATE.md  fuzz_lexer.cpp  fuzz_parser.cpp
tests/ide/: styio_ide_test.cpp
tests/parser/: 00000000.styio  brainfuck.styio
tests/security/: styio_security_test.cpp
tests/type_checking/: 00000000.styio  00000001.styio
(+799 files in other folders)
